# sci_project

./: .gitignore  README.md  links_help.csv  test_file.doc
ai_darknet/: CMakeLists.txt  package.xml
ai_darknet/launch/: ai_darknet.launch
ai_darknet/msg/: bbox.msg  bbox_array.msg
ai_darknet/src/: CDarknet.cpp  CDarknet.h  code_ai_darknet.cpp
alg_tester/: CMakeLists.txt  package.xml
alg_tester/launch/: alg_tester.launch
alg_tester/src/: code_alg_tester.py  image_input.py  useless_image_input.py
bbox_temp/: CMakeLists.txt  package.xml
bbox_temp/launch/: bbox_temp.launch
bbox_temp/src/: code_bbox_temp.py
common_tools/: CMakeLists.txt  package.xml  setup.py  things_to_do_kris.txt
common_tools/scripts/: bagtovid.py  get_negatives_r2.py  make_hog_subimgs.py  score_script.py
counter/: CMakeLists.txt  package.xml
counter/launch/: counter.launch
counter/src/: code_counter.py
detect_color/: CMakeLists.txt  package.xml
detect_color/launch/: detect_color.launch
detect_color/src/: code_detect_color.py
hog_svm_creator/: CMakeLists.txt  package.xml
hog_svm_creator/launch/: hog_svm_creator.launch
hog_svm_creator/src/: hog_svm_creator.py
image_input/: CMakeLists.txt  package.xml
image_input/launch/: image_input.launch
image_input/src/: image_input.py
talker/: CMakeLists.txt  package.xml
talker/launch/: talker.launch
talker/src/: code_talker.py
trad_hog_alg/: CMakeLists.txt  package.xml
trad_hog_alg/launch/: trad_hog_alg.launch
z_SCRIPTS/: gen_test_train_list.py  get_negatives.py  get_subimgs.py  mini_node_bbox_publisher.py
(+2 files in other folders)
